# rpiweatherd

./: .gitignore  .gitmodules  CMakeLists.txt  PostInstall.cmake  README.md  cmake_uninstall.cmake.in  rpiweatherd_config.h.in
cmake/: PostInstall.cmake  RpiwdUser.cmake
devices/: devicevals.h  devretcodes.h  dht11.c  dht11.h  dht22.c  dht22.h
extra/: rpiweatherd-admin.py  rpiweatherd-cli.py
include/: CMakeLists.txt  confighandler.h  datastructures.h  dbhandler.h  device.h  http.h  listener.h  logging.h  measurevals.h  mqmsg.h  trigger.h  util.h
initscripts/: rpiweatherd.service
skel/: rpiwd_triggers.conf  rpiweatherd.conf
skel/initscripts/: rpiweatherd
src/: CMakeLists.txt  confighandler.c  datastructures.c  dbhandler.c  device.c  http.c  listener.c  logging.c  mqmsg.c  rpiweatherd.c  trigger.c  util.c
